<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2021, Lawnchair
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<app.lawnchair.allapps.AllAppsSearchInput xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_container_all_apps"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:elevation="1dp"
    android:layout_marginHorizontal="@dimen/smartspace_page_margin_16"
    android:focusable="true"
    android:background="@android:color/transparent"
    android:translationZ="1dp"
    app:cardCornerRadius="32dp"
    app:strokeColor="@android:color/darker_gray"
    app:strokeWidth="1dp">

    <FrameLayout
        android:id="@+id/search_wrapper"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_box_height"
        android:layout_gravity="center"
        android:background="@drawable/search_input_fg"
        android:clickable="false"
        android:focusable="true"
        android:padding="0dp">

        <TextView
            android:id="@+id/hint"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:clickable="false"
            android:ellipsize="end"
            android:text="@string/all_apps_device_search_hint"
            android:gravity="start|center"
            android:letterSpacing="-0.01"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="?android:textColorTertiary"
            android:textSize="20sp" />

        <app.lawnchair.allapps.FallbackSearchInputView
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:background="@android:color/transparent"
            android:ellipsize="end"
            android:focusableInTouchMode="true"
            android:hint="@string/all_apps_device_search_hint"
            android:gravity="start|center"
            android:imeOptions="actionGo|flagNoExtractUi"
            android:inputType="textNoSuggestions"
            android:letterSpacing="-0.01"
            android:privateImeOptions="bc_search"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="?android:textColorPrimary"
            android:textColorHint="?android:textColorTertiary"
            android:textSize="20sp" />

    </FrameLayout>

    <ImageButton
        android:id="@+id/search_icon"
        android:layout_width="@dimen/search_box_height"
        android:layout_height="@dimen/search_box_height"
        android:layout_gravity="center|start"
        android:layout_marginEnd="6dp"
        android:background="@drawable/pill_ripple"
        android:clickable="true"
        android:contentDescription="@string/search_bar_label"
        android:scaleType="center"
        android:src="@drawable/ic_taskbar_all_apps_search_button"
        app:tint="?android:textColorSecondary" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/search_box_height"
        android:layout_gravity="end|center"
        android:clipToPadding="false"
        android:orientation="horizontal"
        tools:ignore="RtlSymmetry">

        <app.lawnchair.qsb.AssistantIconView
            android:id="@+id/mic_btn"
            android:layout_width="@dimen/qsb_icon_width"
            android:layout_height="@dimen/search_box_height"
            android:background="@drawable/pill_ripple"
            android:clickable="true"
            android:contentDescription="@string/label_voice_search"
            android:padding="@dimen/qsb_icon_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_remove_no_shadow"
            app:tint="?android:textColorSecondary" />

        <ImageButton
            android:id="@+id/lens_btn"
            android:layout_width="@dimen/qsb_icon_width"
            android:layout_height="@dimen/search_box_height"
            android:layout_marginStart="-6dp"
            android:background="@drawable/pill_ripple"
            android:clickable="true"
            android:contentDescription="@string/label_lens"
            android:padding="@dimen/qsb_icon_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_remove_no_shadow"
            app:tint="?android:textColorSecondary" />

        <ImageButton
            android:id="@+id/action_btn"
            android:layout_width="@dimen/search_box_height"
            android:layout_height="@dimen/search_box_height"
            android:background="@drawable/pill_ripple"
            android:clickable="true"
            android:contentDescription="@string/search_input_action_clear_results"
            android:scaleType="center"
            android:src="@drawable/ic_remove_no_shadow"
            app:tint="?android:textColorSecondary" />
    </LinearLayout>
</app.lawnchair.allapps.AllAppsSearchInput>
